cmake_minimum_required(VERSION 3.24)
project(strsignal C)

set(CMAKE_C_STANDARD 11)
add_compile_options(-Wall -Wextra -Wpedantic)
add_executable(strsignal main.c)
install(TARGETS strsignal DESTINATION bin)

enable_testing()
add_test(NAME convertsFromDigitToStr COMMAND strsignal 9)
set_property(TEST convertsFromDigitToStr PROPERTY PASS_REGULAR_EXPRESSION "SIGKILL")
set(unknownArgRegex "^Unknown signal")
add_test(NAME convertsFromStrToDigit COMMAND strsignal SIGKILL)
set_property(TEST convertsFromStrToDigit PROPERTY PASS_REGULAR_EXPRESSION "9")
add_test(NAME convertsDespiteCase COMMAND strsignal SiGKilL)
set_property(TEST convertsDespiteCase PROPERTY PASS_REGULAR_EXPRESSION "9")
add_test(NAME unknownDigitSignal COMMAND strsignal -1)
set_property(TEST unknownDigitSignal PROPERTY PASS_REGULAR_EXPRESSION "${unknownArgRegex}")
add_test(NAME unknownStrSignal COMMAND strsignal SIGDOESNOTEXIST)
set_property(TEST unknownStrSignal PROPERTY PASS_REGULAR_EXPRESSION "${unknownArgRegex}")
add_test(NAME tooManyArgs COMMAND strsignal 1 2 3 4 5)
set_property(TEST tooManyArgs PROPERTY WILL_FAIL TRUE)
add_test(NAME passConvertFromDigitToStr COMMAND strsignal 9)
add_test(NAME passConvertFromStrToDigit COMMAND strsignal SIGKILL)

